--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -8,7 +8,7 @@
     <style>
       *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#0e0e10;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}p{margin:11px 0 22px;overflow:hidden;color:#a5a5a5;}ins{color:#777;text-decoration:none}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}#logo{margin-left:-5px;color:#fff;font-size: 5em;}@media only screen and (min-resolution:192dpi){}@media only screen and (-webkit-min-device-pixel-ratio:2){}#logo{display:inline-block;height:54px;width:150px}
     </style>
-    </head><body><a href="https://www.awse.us/?q=%D0%9E%D1%88%D0%B8%D0%B1%D0%BA%D0%B0+{{ error_code }}"><span id="logo" aria-label="AWSE.US">AWSE.US</span></a>
+    </head><body><a href="https://www.awse.us/?q=What+does+error+{{ error_code }}+mean%3F"><span id="logo" aria-label="AWSE.US">AWSE.US</span></a>
     <p><b>{{ error_code }}.&nbsp;</b><ins>That’s an error.</ins>
     </p><p>{{ description }}.&nbsp;<ins>That’s all we know.</ins>
   </p></body></html>
