--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -22,9 +22,10 @@
         <script src="{% static 'my_web/js/jquery.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{% static 'my_web/bootstrap/js/bootstrap.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{% static 'my_web/js/notify.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="{% static 'my_web/js/aos.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'my_web/js/aos.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{% static 'my_web/fontawesome/js/all.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="{% static 'my_web/js/bluebird.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{% static 'my_web/js/tiny-slider.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <link rel="search" type="application/opensearchdescription+xml" title="AWARE" href="/opensearch.xml">
 
@@ -32,11 +33,12 @@
         <link rel="stylesheet" href="{% static 'my_web/fontawesome/css/all.min.css' %}" crossorigin="anonymous" />
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}" />
         <link rel="icon" type="image/x-icon" href="{% static 'my_web/images/favicon.ico' %}" />
-        <link rel="stylesheet" href="{% static 'my_web/css/aos.css' %}" crossorigin="anonymous" />
-        <link href="{% static 'my_web/css/main_page.css' %}" rel="stylesheet" crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static 'my_web/css/aos.min.css' %}" crossorigin="anonymous" />
+        <link rel="stylesheet" href="{% static 'my_web/css/tiny-slider.min.css' %}" crossorigin="anonymous" />
+        <link href="{% static 'my_web/css/main_page.min.css' %}" rel="stylesheet" crossorigin="anonymous" />
 
         {# Fonts #}
-        <link href="{% static 'my_web/css/fonts_settings.css' %}" rel="stylesheet" crossorigin="anonymous" />
+        <link href="{% static 'my_web/css/fonts_settings.min.css' %}" rel="stylesheet" crossorigin="anonymous" />
 
         <title>{% block title %}{% endblock %}</title>
 
