--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -389,7 +389,7 @@
         {% endif %}
     {% endif %}
     {% for el in data %}
-        {% if forloop.counter == 1 and not search_index %}
+        {% if forloop.counter == 1 and not search_index and images_search %}
             <div class="col-12 col-lg-12 padding-block-center-box">
                 <div class="user box aos-init aos-animate images_search_layer_aware" data-aos="fade-up">
                     <div style="float: left;">
