--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -400,7 +400,7 @@
                                         <div>
                                             <a href="{{ el_images.image.contextLink }}" target="_blank">
                                                 <img id="{{ 32|get_random_string }}" onerror="imgError(this);" style="border-radius: 0.5em;margin-bottom: 5px;width: 50%;margin-right: 5px;-webkit-appearance: none;max-height:200px;max-width: 140px;padding: 0;box-shadow: 0px 6px 16px 0 rgb(0 0 0 / 70%);"
-                                                src="{% url 'imageproxy' %}?data={{ el_images.image.thumbnailLink|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}" alt="Preview image">
+                                                src="{% url 'imageproxy' %}?data={{ el_images.link|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}" alt="Preview image">
                                             </a>
                                         </div>
                                         <div style="background: #313131;padding: 3px;border-radius: 0.5em">
