--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -440,7 +440,7 @@
                 </div>
             </div>
             <script>
-                var slider=tns({container:".photos-slider-aware",items:2,speed:500,loop:!1,autoHeight:!0,mouseDrag:!0,autoWidth:!1,swipeAngle:20,preventScrollOnTouch:!1,lazyload:!1,controls:!1,nav:!1,edgePadding:0,responsive:{320:{gutter:5,items:1},640:{gutter:8,items:2},700:{gutter:12},900:{items:3}}});$(document).ready(function(){function e(){$(".images_search_layer_aware_edit").css("max-width",document.getElementsByClassName("images_search_layer_aware")[0].clientWidth-40)}$(window).resize(function(){e()}),setInterval(e,1e3),setTimeout(function(){$(".hint_text_images_scroll_aware").css({visibility:"hidden","margin-bottom":"-3em"})},5e3)});
+                var slider=tns({container:".photos-slider-aware",items:2,speed:500,loop:!1,autoHeight:!0,mouseDrag:!0,autoWidth:!1,swipeAngle:20,preventScrollOnTouch:!1,lazyload:!1,controls:!1,nav:!1,edgePadding:0,responsive:{320:{gutter:5,items:1},640:{gutter:8,items:2},700:{gutter:12},900:{items:3}}});$(document).ready(function(){function e(){$(".images_search_layer_aware_edit").css("max-width",document.getElementsByClassName("images_search_layer_aware")[0].clientWidth-40)}$(window).resize(function(){e()}),setInterval(e,10),setTimeout(function(){$(".hint_text_images_scroll_aware").css({visibility:"hidden","margin-bottom":"-3em"})},5e3)});
             </script>
         {% endif %}
         {% if not additions and news_append %}
