--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -486,7 +486,7 @@
                     <div class="user box aos-init aos-animate" data-aos="fade-up">
                         <div style="float: left;">
                             <label id="{{ 32|get_random_string }}" class="username" style="margin-top: -0.5em;">
-                                <a id="{{ 32|get_random_string }}" target="_blank" href="{{ el.1.link }}">
+                                <a id="{{ 32|get_random_string }}" target="_blank" href="{{ el.1.link }}" style="word-break: break-word">
                                     {{ el.1.title }}
                                 </a>
                             </label><br>
