--- a/my_web/templates/my_web/base.html
+++ b/my_web/templates/my_web/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+{% spaceless %}
 <html lang="en" style="scroll-behavior: smooth;">
     <head>
         {# Meta tags #}
@@ -90,3 +91,4 @@
     {% block js_module %}
     {% endblock %}
 </html>
+{% endspaceless %}
