--- a/my_web/templates/my_web/error.html
+++ b/my_web/templates/my_web/error.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 <html lang="en"><head><meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -12,3 +13,4 @@
     <p><b>{{ error_code }}.&nbsp;</b><ins>That’s an error.</ins>
     </p><p>{{ description }}.&nbsp;<ins>That’s all we know.</ins>
   </p></body></html>
+{% endspaceless %}
