--- a/my_web/templates/my_web/load_more.html
+++ b/my_web/templates/my_web/load_more.html
@@ -272,93 +272,7 @@
     {% endif %}
 
     {% if videos %}
-        <div class="col-12 col-lg-12 padding-block-center-box">
-            <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <div style="float: left;">
-                    <label id="{{ 32|get_random_string }}" style="margin-bottom: 10%;" class="username"></label><br>
-                    <label id="{{ 32|get_random_string }}" class="city">
-                        <div clas="video_view_block_aware" style="margin-right: 20px;min-width: 100%;float: left;max-width: 100%;">
-                            <video width="100%" controls="controls" class="aware_video_feed_el photohub_item" id="video_player_block_aware"
-                                   autoplay="true" loop="loop" style="display: block;margin: 0 auto;width: min-content;max-width: 100%;max-height: 80vh;margin-bottom: 40px;">
-                                <source src="{% url 'imageproxy' %}?data={{ videos.0.video.playAddr|link_encrypt_img }}&token={{ token_image_proxy }}&video_mode=1&sign={{ user_address_original|sign_address_encrypt }}" type="video/mp4;">
-                            </video>
-                        </div>
-                        <div class="load_next_video_block_button">
-                            <button style="margin:0 auto;display:block;background-color:#121213;visibility: hidden;margin-bottom: 5%;" class="btn btn-dark load-more-end-butt-search-array">
-                                Next video&nbsp;
-                                <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                            </button>
-                        </div>
-                        <p>
-                            <i class="far fa-eye"></i>
-                            {{ videos.0.stats.playCount|num_rounder_custom }}
-                            <br/>
-                            <i class="fas fa-heart"></i>
-                            {{ videos.0.stats.diggCount|num_rounder_custom }}
-                            <br/>
-                            <i class="far fa-comments"></i>
-                            {{ videos.0.stats.commentCount|num_rounder_custom }}
-                            <br/>
-                            <i class="fas fa-share-alt"></i>
-                            {{ videos.0.stats.shareCount|num_rounder_custom }}
-                            <br/><br/>
-                            {{ videos.0.desc }}
-                        </p>
-                    </label>
-                </div>
-            </div>
-        </div>
-        {% if not videos.0.music.original %}
-            <div class="col-12 col-lg-12">
-                <div class="user box aos-init aos-animate" data-aos="fade-up">
-                    <img style="image-rendering: pixelated;width: 60px;height: 60px;border-radius: 50%;" class="lazyloaded"
-                         data-src="{% url 'imageproxy' %}?data={{ videos.0.music.coverMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
-                         src="{% url 'imageproxy' %}?data={{ videos.0.music.coverMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}">
-                    <div style="width: calc(100% - 90px); float: left; ">
-                        <label class="status" data-toggle="tooltip" data-placement="top" data-original-title="1">
-                            <i class="fas fa-compact-disc"></i>
-                        </label>
-                        <label id="{{ 32|get_random_string }}" class="username">
-                            &nbsp;{{ videos.0.music.title }}
-                        </label><br>
-                        <label id="{{ 32|get_random_string }}" class="city">
-                            <i class="fas fa-user"></i>
-                            <span title="Author">&nbsp;{{ videos.0.music.authorName }}</span>
-                            <br/>
-                            <i class="fas fa-record-vinyl"></i>
-                            <span title="Album">&nbsp;{{ videos.0.music.album }}</span>
-                            <br/>
-                            <i class="far fa-clock"></i>
-                            <span title="Duration">&nbsp;{{ videos.0.music.duration|seconds_to_time }}</span>
-                            <br/><br/>
-                            <a href="{{ videos.0.music.playUrl }}" target="_blank">Go to track</a>
-                        </label>
-                    </div>
-                </div>
-            </div>
-        {% endif %}
-        <div class="col-12 col-lg-12">
-            <div class="user box aos-init aos-animate" data-aos="fade-up">
-                <img style="image-rendering: pixelated;width: 60px;height: 60px;border-radius: 50%;" class="lazyloaded"
-                     data-src="{% url 'imageproxy' %}?data={{ videos.0.author.avatarMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}"
-                     src="{% url 'imageproxy' %}?data={{ videos.0.author.avatarMedium|link_encrypt_img }}&video_mode=1&token={{ token_image_proxy }}&sign={{ user_address_original|sign_address_encrypt }}">
-                <div style="width: calc(100% - 90px); float: left; ">
-                    <label class="username">
-                        {{ videos.0.author.nickname }}
-                        {% if videos.0.author.uniqueId %}
-                            (<a href="https://www.tiktok.com/@{{ videos.0.author.uniqueId }}">@{{ videos.0.author.uniqueId }}</a>)
-                        {% endif %}
-                        {% if videos.0.author.verified %}
-                            <i class="fas fa-check"></i>
-                        {% endif %}
-                    </label><br>
-                    <label id="{{ 32|get_random_string }}" class="city">
-                        {# User profile description (bio) #}
-                        {{ videos.0.author.signature }}
-                    </label>
-                </div>
-            </div>
-        </div>
+        <!-- Skip -->
     {% else %}
         {% if not search_index %}
             {% if check_bot_request_search %}
